Fixed nav-bar ul content alignment.

--- a/src/main/resources/public/css/home.css
+++ b/src/main/resources/public/css/home.css
@@ -19,19 +19,22 @@ body {
 #home-nav {
     background: #f4f4f4;
     position: fixed;
+    margin: 0;
     padding: 0;
     width: 100%;
-    height: 5vh;
     top: 0;
 }
 
 #home-nav ul {
     margin: 0;
     padding: 0;
+    height: 5vh;
+    box-sizing: border-box;
     list-style: none;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
+    align-items: center;
 }
 
 #home-nav li {
